VSE: Memory leak adding strips via python #69440

Closed
opened 2019-09-03 12:19:53 +02:00 by Vincent Girès · 6 comments

System Information
Operating system: Linux-3.10.0-327.el7.x86_64-x86_64-with-centos-7.2.1511-Core 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
There is an error when launching blender in background mode with scripts that create strips on the sequencer.
EDIT: this is also happening when not in background mode.
Error: Not freed memory blocks: 3, total unfreed memory 0.001770 MB

Exact steps for others to reproduce the error
Launch blender in background mode with this scripts that create a image strip on the sequencer.

blender --background --python /path/to/script.py

script.py: script.py

**System Information** Operating system: Linux-3.10.0-327.el7.x86_64-x86_64-with-centos-7.2.1511-Core 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** There is an error when launching blender in background mode with scripts that create strips on the sequencer. EDIT: this is also happening when not in background mode. **Error: Not freed memory blocks: 3, total unfreed memory 0.001770 MB** **Exact steps for others to reproduce the error** Launch blender in background mode with this scripts that create a image strip on the sequencer. **blender --background --python /path/to/script.py** script.py: [script.py](https://archive.blender.org/developer/F7715044/script.py)
Author

Added subscriber: @VincentGires

Added subscriber: @VincentGires
Member

Added subscribers: @iss, @lichtwerk

Added subscribers: @iss, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Caused by 7ccc7ef61f.

CC @iss

Can confirm. Caused by 7ccc7ef61f. CC @iss
Philipp Oeser changed title from Error: Not freed memory blocks to VSE: Memory leak adding strips via python 2020-01-08 15:04:25 +01:00

This issue was referenced by 47e71f4623

This issue was referenced by 47e71f462361acc3a4ec9f204e5535fd2cc62b32

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-07-10 16:17:15 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69440
No description provided.